--- a/Trabalho_pratico_1_css_tecweb_2023_1_Harold_Calixto_Walisson_Portela_Alexandre_Gomes/style.css
+++ b/Trabalho_pratico_1_css_tecweb_2023_1_Harold_Calixto_Walisson_Portela_Alexandre_Gomes/style.css
@@ -29,17 +29,29 @@ h2 {
     font-family: 'Montserrat';
 }
   
+h3 {
+    flex-direction: row;
+    color: white;
+    font-size: 24px;
+    padding-left: 10px;
+    font-weight: bold;
+    text-align: left;
+    font-family: 'Montserrat';
+}
 
 nav {
-    background-color: #fff;
     font-family: 'Montserrat';
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: -40px;
   }
   
 ul {
-    flex-direction: row;
+    width: 80%;
+    height: 30px;
     list-style: none;
     background-color: #07133D;
-    margin-left: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -65,7 +77,8 @@ a {
 }
 
 nav a:hover {
-    background-color: white;
+  background-color: #333;
+  color: #07133D;
 }
 
 nav a.active {
@@ -98,23 +111,84 @@ img {
     justify-content: flex-start;
     align-items: left;
     justify-content: left;
+    margin-left: 160px;
 }
 
-.container{
-    display: inline-block;
+/*.area_principal {
+    margin-top: 10px;
+    display: flex;
+    grid-template-columns: auto;
+    float: left;
+} */
+
+.container1{
+    display: flex;
+    margin-left: 90px;
+
 }
 
 .linguas{
     padding: 10px;
+    margin-right: 90px;
 }  
+
+.bannercontainer{
+    width: 1105px;
+    height: 400px;
+    background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    margin-left: 100px;
+
+}
 
 .banner {
     width: 100%;
-    height: 200px;
+    height: 400px;
+    background-color: aqua;
+    display: flex;
 }
 
-.area_principal {
-    float: right;
-    padding-left: 50px;
-    padding-right: 20px;
+.imgbanner{
+    height: 400px;
+    width: 100%;
 }
+
+.blococentro{
+    display: flex;
+}
+
+.container2{
+    display: flex;
+    width: 70%;
+    background-color: red;
+    margin-left: 100px;
+}
+
+
+.topstoryheadline{
+    display: flex;
+    height: 50px;
+    width: 100%;
+    background-color: #07133D;
+    font-family: 'Montserrat';
+}
+
+
+.container3{
+    display: flex;
+    background-color: aqua;
+    width: 270px;
+    height: 400px;
+} 
+
+footer {
+    display: flex;
+    bottom: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    padding: 10px;
+    height: 150px;
+}
+
+
